--- a/client/src/components/Editor/index.html
+++ b/client/src/components/Editor/index.html
@@ -25,7 +25,7 @@
             <div id="codearea"></div>
         </div>
         <button id="analyze">
-            Analyze
+            Run
         </button>
         <div id="result"></div>
     </div>
