--- a/public/style.css
+++ b/public/style.css
@@ -11,6 +11,17 @@
     color-scheme: dark;
 } */
 
+img {
+    width: 3rem;
+    height: 3rem;
+}
+
+#headerContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
 body {
     background-color: #151515;
     font-family: "Rubik", sans-serif, serif;
@@ -32,6 +43,11 @@ body {
 h1 {
     color: #eee;
     font-size: 3rem;
+}
+
+h2 {
+    color: #eee;
+    font-size: 2rem;
     margin-bottom: 1rem;
 }
 
